<resources>
    <string name="app_name">PMFightAcademy</string>
    <string name="preference_login_key">login_pref</string>
    <string name="btn_retry">Retry</string>
    <string name="title_show_more">Show more</string>



    <!-- Coach -->
    <string name="title_coaches">Coaches</string>
    <string name="text_coach_age">%d years old</string>

    <!-- Bottom Navigation -->
    <string name="info_bottom_label">Info</string>
    <string name="coaches_bottom_label">Coaches</string>
    <string name="activities_bottom_label">Activities</string>
    <string name="history_bottom_label">History</string>
    <string name="settings_bottom_label">Settings</string>

    <!-- Booking -->
    <string name="title_booking">Booking</string>
    <string name="title_choose_service">Choose training</string>
    <string name="title_choose_coach">Choose coach</string>
    <string name="title_choose_date">Choose date</string>
    <string name="title_choose_time">Choose time</string>
    <string name="btn_done">Done</string>

    <!-- Services -->
    <string name="service_price">Price: %d UAH</string>
    <string name="service_duration">Duration: 1 hour</string>

    <!-- Info -->
    <string name="title_info_screen">About Fight Academy</string>

    <!-- Activities -->
    <string name="title_planned_activities">Planned Activities</string>
    <string name="title_book_new_activity">Book new activity</string>
    <string name="title_coach">Coach</string>
    <string name="title_price">Price</string>
    <string name="title_activities_history">History</string>
    <string name="activity_price">%d UAH</string>
    <string name="button_log_out_text">Log out</string>

    <!--Auth-->
    <string name="btn_login">Log in</string>
    <string name="btn_register">Registrieren</string>
    <string name="hint_password">Passwort</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_name">Name</string>
    <string name="register_button_text">Done</string>
    <string name="phone_prefix">+380</string>
    <string name="dein_verein">Dein Verein.</string>
    <string name="deine_base">Deine Base.</string>
    <string name="hallo">Hallo.</string>
    <string name="login">Logge dich jetzt ein</string>
    <string name="passwort_vergessen">Passwort vergessen?</string>
    <string name="email">Email</string>
    <string name="password_weg">Passwort weg?</string>
    <string name="forgot_pass_description">Bitte nenne uns deine E-Mail. Wir schicken dir dann einen Link zum zurucksetzen</string>
    <string name="senden">senden</string>
    <string name="deine_e_mail">Deine E-Mail</string>
    <string name="_6_stelliger_code">6-stelliger Code</string>
    <string name="neues_passwort">Neues Passwort</string>
    <string name="speichern">speichern</string>
    <string name="registrieren">Registrieren</string>
    <string name="first_name">Vorname</string>

    <!--Login Errors-->
    <string name="error_password_invalid">Password should contain 8 characters and at least 1 capital letter</string>
    <string name="error_phone_invalid">Please enter valid phone</string>
    <string name="error_name_invalid">Please enter valid name</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_failed">Registration failed</string>
    <string name="such_user_already_exists">Such already exists</string>

    <string name="error_data_could_not_be_loaded">Data could not be loaded</string>
    <string name="server_error">Server error has occurred</string>
    <string name="unknown_error">An unknown error has occurred</string>
    <string name="settings_notifications">Notifications</string>

    <string name="title_empty">Nothing here!</string>
    <string name="second_name">Nachname</string>
    <string name="mobilnumber">Mobilnummer</string>
    <string name="e_mail">E-Mail</string>
    <string name="passwort_wiederholen">Passwort wiederholen</string>
    <string name="freundschaftscode_scannen">Freundschaftscode scannen</string>
    <string name="invitation_description">Wenn du von einem Freund zu Fanbaze eingeladen wurdest, kannst du hier den Freundescode eingeben oder als QR-Code einscannen.</string>
    <string name="code_eingeben">Code eingeben</string>
    <string name="skip">Uberspringen</string>
    <string name="neues_passwort_wiederholen">Neues Passwort wiederholen</string>


</resources>