<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/hallo"
        android:textSize="@dimen/settings_text_big_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/login"
        android:textSize="@dimen/settings_card_text_size"
        app:layout_constraintBottom_toTopOf="@id/layoutLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hello" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/layoutRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80FFFFFF"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80FFFFFF"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_Login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@drawable/button_login_color"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_card_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutRegister" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:text="@string/passwort_vergessen"
        android:textSize="@dimen/settings_card_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>