<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_background">

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/material_emphasis_medium"
        android:text="@string/registrieren"
        android:textSize="@dimen/settings_text_mid_size"
        app:layout_constraintBottom_toTopOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:border_color="#FF000000"
        app:border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/tv_first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:prefixText="@string/phone_prefix"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType=""
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prefixText="@string/phone_prefix"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name"
            android:inputType=""
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prefixText="@string/phone_prefix"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobilnumber"
            android:inputType=""
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prefixText="@string/phone_prefix"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType=""
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/tv_repeat_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prefixText="@string/phone_prefix"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType=""
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_repeat_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:prefixText="@string/phone_prefix"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwort_wiederholen"
            android:inputType=""
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        android:background="@drawable/button_login_color"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/senden"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_card_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>