<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/forgot_password_background" />

    <TextView
        android:id="@+id/tv_forgot_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:text="@string/password_weg"
        android:textSize="@dimen/settings_text_big_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_pass_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:text="@string/forgot_pass_description"
        android:textSize="@dimen/settings_card_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_email_for_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btn_login_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_pass_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#80FFFFFF"
            android:hint="@string/deine_e_mail"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.App.Text"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:background="@drawable/button_login_color"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/senden"
        android:textColor="@color/white"
        android:textSize="@dimen/settings_card_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_for_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>